# Chirp

./: .gitignore  APP.md  CHANGELOG.md  CLAUDE.md  KNOWN_ISSUES.md  ROADMAP.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
scripts/: benchmark_modal.py
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  ct2_server.py  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: app-names.json
src-tauri/src/: app_names.rs  audio.rs  cleanup.rs  clipboard_win.rs  cloud_prompts.rs  commands.rs  hotkey.rs  hotkey_ll_suppress.rs  hotkey_raw_input.rs  inject.rs  lib.rs  llm.rs  richtext.rs  secrets.rs  settings.rs  state.rs  t5.rs  transcribe.rs  vocabulary.rs
src/components/: CleanupStatusBadge.tsx
src/hooks/: useCleanupStatusText.ts  useCleanupToggle.ts  useHotkeyRecorder.ts  useLlmDownloaded.ts  useOverlaySync.ts  useRecording.ts  useSettingsSync.ts  useTauri.ts
src/lib/: constants.ts
src/stores/: appStore.ts
src/styles/: globals.css
training/: benchmark.py  benchmark_3b.py  benchmark_ab.py  benchmark_ab_full.py  benchmark_ab_gemma_qwen.py  benchmark_chain_of_thought.py  benchmark_chirp_v2.py  benchmark_decider_editor.py  benchmark_enc_dec.py  benchmark_gemma4.py  benchmark_gemma4_prompts.py  benchmark_gemma_prompts.py  benchmark_production.py  benchmark_prompts.py  benchmark_prompts_v2.py  benchmark_qwen_quick.py  benchmark_real.py  benchmark_speed.py  benchmark_streaming_cleanup.py  benchmark_variants.py  concat_long_pairs.py  ct2_server.py  curate_t5_dataset.py  generate_data_t5.py  generate_data_v2.py  generate_spoken_grammar.py  generate_t5_v2.py  prepare_dataset.py  relabel_t5.py  train_modal.py  train_t5_modal.py
training/benchmark_v3/: .gitignore  candidates.yaml  download_candidates.py  prompts.py  report.py  rescore.py  run_coedit.py  run_harper.py  run_matrix.py  run_nlprule.py  run_t5.py  runner.py  scorers.py  spike_pipeline.py  sweep_coedit.py  sweep_prompts.py
training/data/: benchmark_ab_gemma_qwen_results.json  benchmark_chirp_v2_results.json  (+6 more)
(+140 files in other folders)
