[package]
name = "chirp"
version = "1.3.1"
description = "Free, local voice-to-text for everyone"
authors = ["Pieter de Bruijn"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.57"
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-log = "2"
rdev = { version = "0.5", features = ["unstable_grab"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
cpal = "0.15"
rubato = "0.15"
hound = "3.5"
sherpa-onnx = { version = "1.12.36", default-features = false, features = ["shared"] }
enigo = "0.6.1"
tokio = { version = "1", features = ["sync", "time", "fs", "process"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
dirs = "5"
regex = "1"
tar = "0.4"
bzip2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
zip = "2"
flate2 = "1"
rodio = "0.19"
tauri-plugin-dialog = "2"
tauri-plugin-aptabase = "1"
tauri-plugin-sentry = { version = "0.5", default-features = false }
tauri-plugin-single-instance = "2"
sentry = { version = "0.42", default-features = false, features = ["reqwest", "backtrace", "contexts", "panic", "debug-images"] }
semver = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
core-graphics = "0.24"
objc = "0.2"
arboard = "3.6.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_DataExchange",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "unwind"

